<resources>
    <string name="app_name">marvelApp</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="User_Name">User</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hello_word">Hello Word</string>
    <string name="title_activity_characters">Characters</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
