<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingRight="24dp"
        android:paddingLeft="24dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            app:srcCompat="@drawable/avangers_logo" />

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:background="#222acd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="20sp"
            android:id="@+id/signup"
            android:layout_marginTop="20sp"
            android:textAlignment="center"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</ScrollView>
