
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingRight="24dp"
        android:paddingLeft="24dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            app:srcCompat="@drawable/avangers_logo" />

        <EditText
            android:id="@+id/name"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:inputType="textPersonName"
            android:hint="@string/User_Name" />

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/TFpass1"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:inputType="textPassword"
            android:hint="@string/Password"/>

        <EditText
            android:id="@+id/TFpass2"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:inputType="textPassword"
            android:hint="@string/Password"/>

        <Button
            android:id="@+id/btnSignUp"
            android:text="@string/register"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:background="#3700B3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</ScrollView>
